--- a/MyBill_Taylor_and_Lester/nbproject/private/private.properties
+++ b/MyBill_Taylor_and_Lester/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Taylor\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\forth\\AppData\\Roaming\\NetBeans\\13\\build.properties
